# raytracer_wknd

./: .gitignore  CMakeLists.txt  RayTracerWeekend.md
renderImages/: diffuseMatAcnespots.ppm  diffuseMat_0_1Gamut.ppm  diffuseMat_0_3Gamut.ppm  diffuseMat_0_5Gamut.ppm  diffuseMat_NoAcnespots.ppm
src/: ca7utils.h  camera.h  color.h  impactable.h  impactable_list.h  interval.h  main.cpp  ray.h  sphere.h  vec3.h
